Bug 1460495 - When sending a transaction, ensure the new transaction that takes its place has the same async-scene-build flag set. r=sotaro

MozReview-Commit-ID: HYwUwqE2P2O